@@ -5,6 +5,7 @@ test_suite("kyua")
 atf_test_program{name="cmd_about_test"}
 atf_test_program{name="cmd_config_test"}
 atf_test_program{name="cmd_db_exec_test"}
+atf_test_program{name="cmd_db_migrate_test"}
 atf_test_program{name="cmd_debug_test"}
 atf_test_program{name="cmd_help_test"}
 atf_test_program{name="cmd_list_test"}
