@@ -45,6 +45,7 @@ extern "C" {
 #include "cli/cmd_about.hpp"
 #include "cli/cmd_config.hpp"
 #include "cli/cmd_db_exec.hpp"
+#include "cli/cmd_db_migrate.hpp"
 #include "cli/cmd_debug.hpp"
 #include "cli/cmd_help.hpp"
 #include "cli/cmd_list.hpp"
@@ -53,6 +54,7 @@ extern "C" {
 #include "cli/cmd_test.hpp"
 #include "cli/common.ipp"
 #include "cli/config.hpp"
+#include "store/exceptions.hpp"
 #include "utils/cmdline/commands_map.ipp"
 #include "utils/cmdline/exceptions.hpp"
 #include "utils/cmdline/globals.hpp"
@@ -158,6 +160,7 @@ safe_main(cmdline::ui* ui, int argc, const char* const argv[],
     commands.insert(new cli::cmd_about());
     commands.insert(new cli::cmd_config());
     commands.insert(new cli::cmd_db_exec());
+    commands.insert(new cli::cmd_db_migrate());
     commands.insert(new cli::cmd_help(&options, &commands));
 
     commands.insert(new cli::cmd_debug(), "Workspace");
@@ -279,6 +282,12 @@ cli::main(cmdline::ui* ui, const int argc, const char* const* const argv,
         ui->err(F("Type '%s help' for usage information.") %
                 cmdline::progname());
         return 3;
+    } catch (const store::old_schema_error& e) {
+        const std::string message = F("The database has schema version %s, "
+                                      "which is too old; please use db-migrate "
+                                      "to upgrade it") % e.old_version();
+        cmdline::print_error(ui, message);
+        return 2;
     } catch (const std::runtime_error& e) {
         cmdline::print_error(ui, e.what());
         return 2;
